--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+    <!-- 🔧 FIX para SockJS / STOMP (global no definido) -->
+  <script>
+    window.global = window;
+  </script>
   <title>CiberClinicaApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
